Made great progress on prettifying the front end. Most 1x1 tiles have been styled, and now just need to finish the chart (which is slightly misaligned) and the key facts/price history. The latter two are mainly done the only issue is the key facts needs the advert title added.

--- a/static/carprices.css
+++ b/static/carprices.css
@@ -76,11 +76,6 @@ body {
     stroke-width: 1px;
 }
 
-#axisSelectorDiv {
-    margin-left: 15px;
-    display: inline-block;
-}
-
 .axis path, .axis line {
   fill: none;
   stroke: white;
@@ -91,33 +86,6 @@ body {
   stroke: #000;
   fill: GreenYellow;
   r: 2.5px;
-}
-
-.axislabel {
-    fill: black;
-    text-anchor: middle;
-}
-
-#xSlider {
-    position: absolute;
-    top: 570px;
-    left: 90px;
-    display: inline;
-    width: 480px;
-    height: 15px;
-}
-
-#ySlider {
-    position: absolute;
-    top: 30px;
-    left: 15px;
-    display: inline;
-    width: 15px;
-    height: 480px;
-}
-
-.ui-slider-handle {
-    font-size: 22px;
 }
 
 .donutTooltip {
@@ -174,15 +142,92 @@ body {
 	height: 830px;
 }
 
-#keyFactsList, #priceHistoryList {
-	font-size: 16px;
-}
-
 svg#svgMakesDonut {
 	margin-left: 15px;
 	margin-top: -8px;
 }
 
+.sel {
+	width: 250px;
+	border: 0;
+	color: rgb(255,255,255);
+	background: transparent;
+	font-size: 16px;
+	padding: 2px 10px;
+	-webkit-appearance: none;
+}
+
+.sel option {
+	background: rgb(120,120,120);
+}
+
+.selDiv {
+	margin-left: 15px;
+	margin-bottom: 20px;
+	width: 250px;
+	-moz-border-radius: 9px 9px 9px 9px;
+	-webkit-border-radius: 9px 9px 9px 9px;
+	border-radius: 9px 9px 9px 9px;
+	box-shadow: 1px 1px 11px rgb(150,150,150);
+	background: rgb(100,100,100) url("http://i62.tinypic.com/15xvbd5.png") no-repeat scroll 224px center;
+}
+
+.selectorText {
+	font-size: 12px;
+	display: block;
+	width: 100px;
+	margin-left: 20px;
+	margin-top: 25px;
+	margin-bottom: 5px;
+}
+
+/* still to fix */
+
+#keyFactsList, #priceHistoryList {
+	font-size: 16px;
+}
+
+/*
+.axislabel {
+    fill: white;
+    text-anchor: middle;
+}*/
+
+.axis {
+	fill: white;
+}
+
+#xSlider {
+    position: absolute;
+    top: 545px;
+    left: 60px;
+    display: inline;
+    width: 480px;
+    height: 15px;
+}
+
+#ySlider {
+    position: absolute;
+    top: 30px;
+    left: 20px;
+    display: inline;
+    width: 15px;
+    height: 480px;
+}
+
+#clustersChart {
+	position: absolute;
+	left: 30px;
+	bottom: 30px;
+}
+
+svg#svgChartClusters text {
+	fill: white;
+}
+
+.ui-slider-handle {
+    font-size: 22px;
+}
 
 
 
